<resources>
    <string name="app_name">Inbox Pager</string>
    <string name="author">Copyright &#169; 2016 &#8211; 2026  ITPROJECTS</string>
    <string name="disclaimer">DISCLAIMER:</string>
    <string name="disclaimer_text">The authors of this software are not liable for ANY damages that this software may cause - accidental or otherwise, under ANY and EVERY law or regulation, and in ANY and EVERY country or territory of the world.</string>
    <string name="dialog_license">License Information</string>
    <string name="license">Application License: General Public License 3</string>
    <string name="license_long" translatable="false">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\n
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\n
        You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
    </string>
    <string name="license_media_files" translatable="false">Application Icon:\nCC-BY-SA, Creative Commons Attribution Share Alike 4.0 International Public License</string>
    <string name="license_font" translatable="false">Dottz Font:\nSIL-OFL 1.1 License, ITPROJECTS</string>
    <string name="license_long_font" translatable="false">Copyright (&#169;) 2016 &#8211; 2020 ITPROJECTS\n\nSIL OPEN FONT LICENSE\n\nVersion 1.1 - 26 February 2007\nPREAMBLE\n\nThe goals of the Open Font License (OFL) are to stimulate worldwide development of collaborative font projects,
        to support the font creation efforts of academic and linguistic communities, and to provide a free and open framework in which fonts may be shared and improved in partnership with others.\n\n
        The OFL allows the licensed fonts to be used, studied, modified and redistributed freely as long as they are not sold by themselves. The fonts, including any derivative works, can be bundled, embedded,
        redistributed and/or sold with any software provided that any reserved names are not used by derivative works. The fonts and derivatives, however, cannot be released under any other type of license.
        The requirement for fonts to remain under this license does not apply to any document created using the fonts or their derivatives.\n\n
        DEFINITIONS\n\n
        "Font Software" refers to the set of files released by the Copyright Holder(s) under this license and clearly marked as such. This may include source files, build scripts and documentation.\n\n"Reserved Font Name" refers to any names specified as such after the copyright statement(s).\n\n
        "Original Version" refers to the collection of Font Software components as distributed by the Copyright Holder(s).\n\n"Modified Version" refers to any derivative made by adding to, deleting, or substituting — in part or in whole — any of the components of the
        Original Version, by changing formats or by porting the Font Software to a new environment.\n\n"Author" refers to any designer, engineer, programmer, technical writer or other person who contributed to the Font Software.\n\nPERMISSION and CONDITIONS\n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy of the Font Software, to use, study, copy, merge, embed, modify, redistribute, and sell modified and unmodified copies of the Font Software, subject to the following conditions:\n\n
        1) Neither the Font Software nor any of its individual components, in Original or Modified Versions, may be sold by itself.\n\n
        2) Original or Modified Versions of the Font Software may be bundled, redistributed and/or sold with any software, provided that each copy contains the above copyright notice and this license. These can be included either as stand-alone text files, human-readable headers or in the appropriate
        machine-readable metadata fields within text or binary files as long as those fields can be easily viewed by the user.\n\n
        3) No Modified Version of the Font Software may use the Reserved Font Name(s) unless explicit written permission is granted by the corresponding Copyright Holder. This restriction only applies to the primary font name as presented to the users.\n\n
        4) The name(s) of the Copyright Holder(s) or the Author(s) of the Font Software shall not be used to promote, endorse or advertise any Modified Version, except to acknowledge the contribution(s) of the Copyright Holder(s) and the Author(s) or with their explicit written permission.\n\n
        5) The Font Software, modified or unmodified, in part or in whole, must be distributed entirely under this license, and must not be distributed under any other license. The requirement for fonts to remain under this license does not apply to any document created using the Font Software.\n\n
        TERMINATION\n\nThis license becomes null and void if any of the above conditions are not met.\n
        DISCLAIMER\n\n
        THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT OF COPYRIGHT, PATENT, TRADEMARK, OR OTHER RIGHT.
        IN NO EVENT SHALL THE COPYRIGHT HOLDER BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM OTHER DEALINGS IN THE FONT SOFTWARE.</string>
    <string name="license_open_keychain">OpenKeychain (Java) Apache License, Version 2.0.</string>
    <string name="license_long_open_keychain" translatable="false">Copyright (&#169;) Copyright (C) 2016 &#8211; 2020  ITPROJECTS\nCopyright (&#169;) 2013 &#8211; 2015 Dominik Schürmann dominik@dominikschuermann.de\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
        "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License.\n
    </string>
    <string name="license_apache_foundation" translatable="false">Apache Software Foundation Classes Apache License, Version 2.0.</string>
    <string name="license_long_apache_foundation" translatable="false">Copyright (&#169;) 2004 The Apache Software Foundation\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
        "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License.\n
    </string>
    <string name="license_sql_cipher_java">SQLCipher (Java) Apache License, Version 2.0.</string>
    <string name="license_long_sql_cipher_java" translatable="false">Copyright (&#169;) 2006 The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an
        "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License.\n
    </string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Application Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_add_account">Add Account</string>
    <string name="menu_all_seen">Mark All Read</string>
    <string name="menu_log">Errors / Exceptions</string>
    <string name="menu_status">Inbox Status</string>
    <string name="ssl_auth_popup_title">Last Connection</string>
    <string name="no_messages">Empty Inbox</string>
    <string name="activity_edit_account_title">Edit Account</string>
    <string name="edit_account_email">Account Name</string>
    <string name="edit_account_email_hint">your.account@example.com</string>
    <string name="edit_account_username">Username</string>
    <string name="edit_account_pass">Password</string>
    <string name="edit_account_incoming_server_hint_imap" translatable="false">imap.example.com</string>
    <string name="edit_account_incoming_server_port_hint_imap" translatable="false">993</string>
    <string name="edit_account_imap_or_pop_on" translatable="false">IMAP</string>
    <string name="edit_account_smtp" translatable="false">SMTP</string>
    <string name="edit_account_smtp_server_hint" translatable="false">smtp.example.com</string>
    <string name="edit_account_smtp_server_port_hint" translatable="false">465</string>
    <string name="edit_account_auto_check">Allow in all-accounts-refresh</string>
    <string name="edit_account_always_ask_pass">Ask for password every time</string>
    <string name="edit_account_auto_save_full_msgs">Keep full messages in database</string>
    <string name="edit_account_net_checks">On-line tests</string>
    <string name="edit_account_nc_check">Auto Test (Long)</string>
    <string name="edit_account_check_incoming">Try Incoming</string>
    <string name="edit_account_check_smtp">Try Outgoing</string>
    <string name="edit_account_save">SAVE</string>
    <string name="edit_account_delete">DELETE</string>
    <string name="menu_download_msg">Download ➠ Database</string>
    <string name="menu_save_message">Save ➠ Device</string>
    <string name="menu_delete_from_server">Delete From Server</string>
    <string name="menu_delete_full_message">Delete Full Message (DB)</string>
    <string name="menu_delete_full_messages">Delete Full Messages</string>
    <string name="menu_see_full_message">View Full Message</string>
    <string name="sett_auto_check_title">Refresh All Inboxes</string>
    <string name="sett_auto_check_summary">Default setting. ALL participating message accounts will be checked, when the home screen refresh button is clicked.</string>
    <string name="sett_vibrates_download_title">Vibration on new messages</string>
    <string name="sett_vibrates_download_summary">Device will vibrate, when new messages arrive.</string>
    <string name="sett_msg_font_size_title">Font SIZE</string>
    <string name="sett_msg_font_size_summary">Font size for the fields, when viewing a message.</string>
    <string name="sett_enable_pw_title">Application Password</string>
    <string name="sett_enable_pw_summary_off">Protection Status: DISABLED</string>
    <string name="sett_change_pw_new">NEW PASSWORD</string>
    <string name="sett_change_pw_retype">REPEAT NEW PASS</string>
    <string name="sett_change_pw_text">>= 12 symbols</string>
    <string name="sett_change_pw_vis" translatable="false">👁</string>
    <string name="empty_string" translatable="false"/>
</resources>