<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_settings"
        android:icon="@drawable/settings"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/log_menu" android:title="@string/menu_log"/>
            <item android:id="@+id/delete_from_server_menu" android:title="@string/menu_delete_from_server"/>
            <item android:id="@+id/delete_from_local_menu" android:title="@string/menu_delete_full_message"/>
            <item android:id="@+id/download_message_menu" android:title="@string/menu_download_msg"/>
            <item android:id="@+id/save_message_menu" android:title="@string/menu_save_message"/>
            <item android:id="@+id/details_menu" android:title="@string/menu_see_full_message"/>
        </menu>
    </item>
</menu>
