<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270sp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:padding="10sp">

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/sett_change_pw_new"
        android:autofillHints="@string/empty_string"
        android:inputType="textPassword|textNoSuggestions"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_pw_retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/sett_change_pw_retype"
        android:autofillHints="@string/empty_string"
        android:inputType="textPassword|textNoSuggestions"
        android:maxLines="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="0sp">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="0sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/sett_change_pw_text"
            tools:ignore="RelativeOverlap" />

        <CheckBox
            android:id="@+id/cb_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="0sp"
            android:layout_marginEnd="10sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/sett_change_pw_vis" />

    </RelativeLayout>

</LinearLayout>
