<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InboxUI">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/inbox_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_home_bar_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu_refresh"
            android:padding="4sp"
            app:srcCompat="@drawable/btn_refresh" />

        <TextView
            android:id="@+id/inbox_page_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/counter_rounded"
            android:paddingLeft="4sp"
            android:paddingTop="4sp"
            android:paddingRight="4sp"
            android:paddingBottom="4sp"
            android:shadowColor="@color/color_title"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:textColor="@color/color_home_bar_background" />

        <ImageView
            android:id="@+id/ssl_auth_img_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ssl_auth_popup_title"
            android:paddingStart="10sp"
            android:paddingEnd="0sp"
            app:srcCompat="@drawable/padlock_error"
            android:visibility="gone" />

    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/msg_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/no_messages"
        android:layout_below="@+id/inbox_toolbar" />

    <TextView
        android:id="@+id/no_messages"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_edit_accounts_msg"
        android:layout_centerInParent="true"
        android:text="@string/no_messages"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_edit_accounts_msg" />

</RelativeLayout>
